2012-03-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII_private.h: Sort commands, response codes and events
	into numerical order.

2012-03-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #30451: Accessing some Xmega memory sections gives not
	supported error
	* stk500v2.c: Handle all Xmega memory sections (except
	"prodsig" which is not documented in AVR079)
	* fileio.c: Treat the "boot", "application", and "apptable"
	regions (which are actually subregions of "flash") all as
	being flash, i.e. suppress trailing 0xFF bytes when reading
	them
	* avr.c: (Dito.)

2012-03-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c (jtagmkII_close): The GO command before signing off
	turned out to be not required for normal megaAVR devices, and to
	cause the exact opposite (i.e. the target stopping) on Xmega
	devices being programmed to JTAG.  However, programming Xmega
	devcies through PDI *does* need the GO command.

2012-03-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Print a configuration summary at the end of the
	configure run

2012-02-11  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7718: Merge global data of avrftdi in a private data structure
	* avrftdi.[ch]: moved global data into private data structure, moved
	private defines from header file into source file

2012-02-06  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7720 Bug in EEPROM write
	* avrftdi.c: fixed wrong buffer address initialization in paged_write
	* fileio.c: added #include <stdint.h>

2012-02-05  Rene Liebscher <R.Liebscher@gmx.de>

	bug #30559 Ft232 bit-bang support
	* ft245r.c: cancel reader thread before exiting program

2012-02-04  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7717 avrftdi_flash_write is broken
	* avrftdi.c: fixed wrong buffer address initialization in paged_write
	bug #35296 Extraneous newlines in output.
	* main.c: fixed output of newlines at 100% progress

2012-02-03  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7715 FT4232H support