@@ -179,7 +179,8 @@
 #define MTYPE_SIGN_JTAG   0xB4	/* signature in programming mode */
 #define MTYPE_OSCCAL_BYTE 0xB5	/* osccal cells in programming mode */
 #define MTYPE_CAN         0xB6	/* CAN mailbox */
-#define MTYPE_FLASH       0xc0	/* xmega flash - undocumented in AVR067 */
+#define MTYPE_FLASH       0xc0	/* xmega (app.) flash - undocumented in AVR067 */
+#define MTYPE_BOOT_FLASH  0xc1	/* xmega boot flash - undocumented in AVR067 */
 #define MTYPE_USERSIG     0xc5	/* xmega user signature - undocumented in AVR067 */
 #define MTYPE_PRODSIG     0xc6	/* xmega production signature - undocumented in AVR067 */
 
